Add Mockito-based unit tests for TreeService with TreeRepo integration
- Introduced mock-based tests for `TreeService` interaction with `TreeRepo`.
- Added assertions for correct persistence of BST structure (`createAndSave`).
- Included tests for edge cases like empty input and retrieval methods (`getAllSaved`, `getById`).